<resources>
    <string name="app_name">TakeNote</string>
    <string name="app_info">TakeNote is an application which helps you manage notes. Create a subject and start taking notes!</string>
    <string name="create_subject">Create Subject</string>
    <string name="subjectTitle">Name subject: </string>
    <string name="noteTitle">Name note: </string>
    <string name="subjectDescription">Description of the subject: </string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="dialog_positive">OK!</string>
    <string name="preferenceMain">Main</string>
    <string name="pref_silent_mode_title">Silent mode</string>
    <string name="addNote">Add note</string>
    <string name="facebook_app_id">1922438158005473</string>
    <string name="fb_login_protocol_scheme">fb1922438158005473</string>
    <string name="logout">Log Out</string>
    <string name="welcome">Welcome to TakeNote</string>
    <string name="welcome_subtitle">Your notes are safe with us</string>
    <string name="pref_subject_auto_capatalize_title">Capatalize first letter</string>
    <string name="pref_subject_auto_capatalize_subtitle">when adding a new subject</string>
    <string name="subject_detail_view_title">Title:</string>
    <string name="subject_detail_view_description">Description:</string>
    <string name="subject_detail_view_statistics">Statistics:</string>
    <string name="subject_detail_view_wordCount">Word count: </string>
    <string name="subject_detail_view_letterCount">Letter count: </string>
    <string name="search_hint">Search Notes</string>
    <string name="action_bar_button_search">Search</string>
    <string name="subject_detail_view_dateCreated">Date created: </string>
    <string name="subject_detail_view_dateUpdated">Date updated: </string>
    <string name="create_note_view_notify_me">Notify me</string>
    <string name="datetimepicker_view_date">Date</string>
    <string name="datetimepicker_view_time">Time</string>
    <string name="get_premium">Get Premium</string>
</resources>
