<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferenceMain">
        <SwitchPreference
            android:key="pref_silent_mode"
            android:title="@string/pref_silent_mode_title"
            android:defaultValue="false"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Subject">
        <SwitchPreference
            android:key="pref_subject_auto_capatalize"
            android:title="@string/pref_subject_auto_capatalize_title"
            android:summary="@string/pref_subject_auto_capatalize_subtitle"
            android:textColor="@color/text"
            android:defaultValue="false"
            />
    </PreferenceCategory>
</PreferenceScreen>