<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_bar_button_search">
    </item>
    <item android:id="@+id/menu_settings"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/menu_settings"/>
    <item android:id="@+id/menu_about"
        app:showAsAction="never"
        android:orderInCategory="101"
        android:title="@string/menu_about"/>
    <item android:id="@+id/menu_logout"
        app:showAsAction="never"
        android:orderInCategory="102"
        android:title="@string/logout"
        />
</menu>