<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/subject_detail_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_detail_view_title"

        android:padding="10dp"
        android:labelFor="@id/subject_detail_view_title_subject"/>

    <EditText
        android:id="@+id/subject_detail_view_title_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:backgroundTint="@android:color/transparent"
        android:inputType="text"
        android:padding="10dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/subject_detail_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_detail_view_description"
        android:padding="10dp"
        android:labelFor="@id/subject_detail_view_description_subject"/>

    <EditText
        android:id="@+id/subject_detail_view_description_subject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:text=""
        android:ems="2"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:layout_weight="0.06"
        />

    <RadioGroup
        android:id="@+id/colorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/radioButtonColorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorGray" />

        <RadioButton
            android:id="@+id/radioButtonColorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent" />

        <RadioButton
            android:id="@+id/radioButtonColorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radioButtonColorDarkBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimaryDark" />
        <RadioButton
            android:id="@+id/radioColorNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="None"/>
    </RadioGroup>
    <TextView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_detail_view_statistics"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/subject_detail_view_wordCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_detail_view_wordCount"
        android:paddingBottom="6dp"
        android:paddingEnd="6dp"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/subject_detail_view_letterCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_detail_view_letterCount"
        android:paddingBottom="6dp"
        android:paddingEnd="6dp"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:textSize="12sp"/>

</LinearLayout>